Add test command into YAML file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,12 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
+  
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*Test/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
